--- a/pacman.conf
+++ b/pacman.conf
@@ -1,4 +1,4 @@
-# Erik Dubois
+# Erik Dubois - nemesis
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
@@ -34,7 +34,7 @@ Color
 #NoProgressBar
 CheckSpace
 VerbosePkgLists
-ParallelDownloads = 12
+ParallelDownloads = 20
 #DownloadUser = alpm
 #DisableSandbox
 ILoveCandy
@@ -108,10 +108,6 @@ Server = https://erikdubois.github.io/$repo/$arch
 SigLevel = Required DatabaseOptional
 Include = /etc/pacman.d/chaotic-mirrorlist
 
-#####################################################
-# Remove these last lines once they produce errors
-#####################################################
-
 #[arcolinux_repo]
 #SigLevel = Never
 #Server = https://arcolinux.github.io/$repo/$arch
@@ -119,5 +115,3 @@ Include = /etc/pacman.d/chaotic-mirrorlist
 #[arcolinux_repo_3party]
 #SigLevel = Never
 #Server = https://arcolinux.github.io/$repo/$arch
-
-
